Fixing mobile logo link, stop some colors changing on mobile size

--- a/css/foundation.css
+++ b/css/foundation.css
@@ -154,6 +154,10 @@
 }
 }
 
+.def{
+  color: #000000;
+}
+
 .Brown {
 	color: #EC1C24;
 }
@@ -164,6 +168,18 @@
 
 .Brown h1 {
 	color: #EC1C24;
+}
+
+.RISD {
+  color: #000000;
+}
+
+.RISD a{
+  color: #000000;
+}
+
+.RISD h1{
+  color: #000000;
 }
 
 .MIT {
